--- a/YwfSimpleConsoleAppTerminal/YwfSimpleConsoleAppTerminal.csproj
+++ b/YwfSimpleConsoleAppTerminal/YwfSimpleConsoleAppTerminal.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,6 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandCore.cs" />
+    <Compile Include="ConsoleHelper.cs" />
+    <Compile Include="IBaseJob.cs" />
+    <Compile Include="JobAttribute.cs" />
+    <Compile Include="Job\TestJob.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
